--- a/IOSIPA.plist
+++ b/IOSIPA.plist
@@ -1,1 +1,41 @@
-
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+   <key>items</key>
+   <array>
+       <dict>
+           <key>assets</key>
+           <array>
+               <dict>
+                   <key>kind</key>
+                   <string>software-package</string>
+                   <key>url</key>
+                   <string>https://game.jyhg2009.cn:8443/update/appleIPA/TexasPoker_signed.ipa</string>
+               </dict>
+               <dict>
+                   <key>kind</key>
+                   <string>display-image</string>
+                   <key>needs-shine</key>
+                   <true/>
+                   <key>url</key>
+                   <string>https://game.jyhg2009.cn:8443/update/Icon-152.png</string>
+               </dict>
+           </array>
+           <key>metadata</key>
+           <dict>
+               <key>bundle-identifier</key>
+               <string>cn.wb.TexasPoker</string>
+               <key>bundle-version</key>
+               <string>1.1.0.0</string>
+               <key>kind</key>
+               <string>software</string>
+               <key>subtitle</key>
+               <string>DeZhouDaLuanDou</string>
+               <key>title</key>
+               <string>DeZhouDaLuanDou</string>
+           </dict>
+       </dict>
+   </array>
+</dict>
+</plist>
