--- a/IOSIPA.plist
+++ b/IOSIPA.plist
@@ -11,7 +11,7 @@
                    <key>kind</key>
                    <string>software-package</string>
                    <key>url</key>
-                   <string>https://game.jyhg2009.cn:8443/update/appleIPA/TexasPoker_signed.ipa</string>
+                   <string>https://game.jyhg2009.cn/update/appleIPA/TexasPoker_signed.ipa</string>
                </dict>
                <dict>
                    <key>kind</key>
@@ -19,7 +19,7 @@
                    <key>needs-shine</key>
                    <true/>
                    <key>url</key>
-                   <string>https://game.jyhg2009.cn:8443/update/Icon-152.png</string>
+                   <string>https://game.jyhg2009.cn/update/Icon-152.png</string>
                </dict>
            </array>
            <key>metadata</key>
